--- a/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
@@ -1,3 +1,4 @@
+{% load afat %}
 {% load evelinks %}
 {% load i18n %}
 
@@ -24,7 +25,13 @@
                         <td>{{ value.1 }}</td>
                         <td>{{ value.2 }}</td>
                         <td class="text-end">
-                            <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_corporation' value.0 year month %}">
+                            <a
+                                class="btn btn-primary btn-sm"
+                                href="{% url 'afat:statistics_corporation' value.0 year month %}"
+                                data-bs-toggle="tooltip"
+                                data-bs-html="true"
+                                data-bs-title="{% translate 'View detailed corporation statistics for: ' %}<br>{{ month|month_name }} {{ year }}"
+                            >
                                 <i class="fa-solid fa-eye"></i>
                             </a>
                         </td>
