--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -1,83 +1,57 @@
 {% load i18n %}
 
 <div id="tab-members" class="tab-pane fade border-0" role="tabpanel" aria-labelledby="tab-members">
-{#    <div class="card-body">#}
-{#        <h3>{{ corporation }} {% translate "Members" %}</h3>#}
-{##}
-{#        <table class="table table-striped table-hover w-100" id="corp-members">#}
-{#            <thead>#}
-{#                <tr>#}
-{#                    <th>{% translate "Character" %}</th>#}
-{#                    <th>{% translate "FATs" %}</th>#}
-{#                    <th><!-- {% translate "Character statistics" %} --></th>#}
-{#                </tr>#}
-{#            </thead>#}
-{##}
-{#            <tbody>#}
-{#                {% for key, value in chars.items %}#}
-{#                    <tr>#}
-{#                        <td>{{ key }}</td>#}
-{#                        <td>{{ value.0 }}</td>#}
-{#                        <td class="text-end">#}
-{#                            <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_character' value.1 year month %}">#}
-{#                                <i class="fa-solid fa-eye"></i>#}
-{#                            </a>#}
-{#                        </td>#}
-{#                    </tr>#}
-{#                {% endfor %}#}
-{#            </tbody>#}
-{#        </table>#}
-
-        <div class="row pt-2">
-            <div class="col-4">
-                <div class="card card-default">
-                    <div class="card-header">
-                        <h3 class="card-title mb-0">{% translate "Main characters" %}</h3>
-                    </div>
-                    <div class="card-body">
-                        {% if main_chars %}
-                            <table class="table table-striped table-hover w-100" id="corp-members">
-                                <thead>
-                                    <tr>
-                                        <th>{% translate "Character" %}</th>
-                                        <th>{% translate "FATs" %}</th>
-                                        <th><!-- {% translate "Character statistics" %} --></th>
-                                    </tr>
-                                </thead>
-
-                                <tbody>
-                                    {% for main_char in main_chars.items %}
-                                        {% for main in main_char %}
-                                            {% if main.name %}
-                                                <tr>
-                                                    <td>{{ main.name }}</td>
-                                                    <td>{{ main.fats }}</td>
-                                                    <td class="text-end">
-                                                        <a class="btn btn-primary btn-sm" href="">
-                                                            <i class="fa-solid fa-eye"></i>
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                            {% endif %}
-                                        {% endfor %}
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        {% endif %}
-                    </div>
+    <div class="row pt-3">
+        <div id="col-corp-main-characters" class="col-md-6 col-lg-4 mb-3">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title mb-0">{% translate "Main characters" %}</div>
                 </div>
-            </div>
 
-            <div class="col-8">
-                <div class="card card-default">
-                    <div class="card-header mb-0">
-                        <h3 class="card-title">{% translate "Alt characters" %}</h3>
-                    </div>
+                <div class="card-body">
+                    {% if main_chars %}
+                        <table class="table table-striped table-hover w-100" id="corp-main-characters">
+                            <thead>
+                                <tr>
+                                    <th>{% translate "Character" %}</th>
+                                    <th>{% translate "FATs" %}</th>
+                                    <th><!-- {% translate "Character statistics" %} --></th>
+                                </tr>
+                            </thead>
 
-                    <div class="card-body">
-                    </div>
+                            <tbody>
+                                {% for main_char in main_chars.items %}
+                                    {% for main in main_char %}
+                                        {% if main.name %}
+                                            <tr>
+                                                <td>{{ main.name }}</td>
+                                                <td>{{ main.fats }}</td>
+                                                <td class="text-end">
+                                                    <button class="btn btn-primary btn-sm">
+                                                        <i class="fa-solid fa-eye"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% endif %}
                 </div>
             </div>
         </div>
-{#    </div>#}
+
+        <div id="col-character-alt-characters" class="col-md-6 col-lg-8 d-none">
+            <div class="card card-default">
+                <div class="card-header">
+                    <div class="card-title mb-0">{% translate "Alt characters" %}</div>
+                </div>
+
+                <div class="card-body">
+                    <div class="afat-character-alt-characters"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
