--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -56,3 +56,12 @@
         line-height: 1.1;
     }
 }
+
+/* Data tables
+------------------------------------------------------------------------------------- */
+@media all {
+    div#corp-main-characters_wrapper div.dataTables_filter input {
+        margin-left: 0;
+        width: 100%;
+    }
+}
