[CHANGE] Use Chart.js bundled with Alliance Auth

--- a/afat/templates/afat/view/statistics/statistics-alliance.html
+++ b/afat/templates/afat/view/statistics/statistics-alliance.html
@@ -44,7 +44,7 @@
 {% endblock %}
 
 {% block extra_javascript %}
-    {% include "afat/bundles/chartjs-js.html" %}
+    {% include "bundles/chart-js.html" %}
     {% include "afat/bundles/afat-statistics-js.html" %}
     {% include "bundles/datatables-js-bs5.html" %}
     {% include "bundles/moment-js.html" %}
