[ADD] Doctrine dropdown to forms

--- a/afat/templates/afat/partials/fatlinks/add/clickable-link.html
+++ b/afat/templates/afat/partials/fatlinks/add/clickable-link.html
@@ -24,6 +24,8 @@
                     {% bootstrap_field manual_fatlink_form.type %}
                 {% endif %}
 
+                {% bootstrap_field manual_fatlink_form.doctrine %}
+
                 {% bootstrap_field manual_fatlink_form.duration %}
 
                 {% include "afat/partials/form/required-field-hint.html" %}
