--- a/afat/templates/afat/partials/fatlinks/add/esi-link.html
+++ b/afat/templates/afat/partials/fatlinks/add/esi-link.html
@@ -39,6 +39,8 @@
                     {% bootstrap_field esi_fatlink_form.type_esi %}
                 {% endif %}
 
+                {% bootstrap_field esi_fatlink_form.doctrine_esi %}
+
                 {% include "afat/partials/form/required-field-hint.html" %}
 
                 <div class="form-group text-end">
