[ADD] Doctrine to templates

--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -36,6 +36,7 @@
                                     <tr>
                                         <th>{% translate "Fleet name" %}</th>
                                         <th>{% translate "Fleet type" %}</th>
+                                        <th>{% translate "Doctrine" %}</th>
                                         <th>{% translate "Location" %}</th>
                                         <th>{% translate "Ship" %}</th>
                                         <th>{% translate "Eve time" %}</th>
