--- a/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
@@ -11,6 +11,7 @@
                 <tr>
                     <th>{% translate "Fleet name" %}</th>
                     <th>{% translate "Fleet type" %}</th>
+                    <th>{% translate "Doctrine" %}</th>
                     <th>{% translate "Creator" %}</th>
                     <th>{% translate "Eve time" %}</th>
                     <th><!-- {% translate "Actions" %} --></th>
