--- a/afat/templates/afat/view/fatlinks/fatlinks-overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-overview.html
@@ -26,6 +26,7 @@
                     <tr>
                         <th>{% translate "Fleet name" %}</th>
                         <th>{% translate "Fleet type" %}</th>
+                        <th>{% translate "Doctrine" %}</th>
                         <th>{% translate "Creator" %}</th>
                         <th>{% translate "Eve time" %}</th>
                         <th>{% translate "# of FATs" %}</th>
