--- a/afat/templates/afat/bundles/afat-fatlink-add-js.html
+++ b/afat/templates/afat/bundles/afat-fatlink-add-js.html
@@ -1,3 +1,8 @@
 {% load afat %}
 
-<script type="module" src="{% afat_static 'afat/javascript/afat-fatlink-add.min.js' %}"></script>
+<script
+    type="module"
+    src="{% afat_static 'afat/javascript/afat-fatlink-add.min.js' %}"
+    integrity="sha512-CtsCwKfzxZQq3XRsXS2q0ARjhri2hkfxnzenjedEaSPx0SkyzuJIQB3ZQz7h0JfM75dIC2zS+9WUrGw0yCmeTA=="
+    crossorigin="anonymous"
+></script>
