--- a/afat/templates/afat/partials/fatlinks/details/fatlink-info.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink-info.html
@@ -53,7 +53,7 @@
                 </p>
 
                 <p>
-                    <button class="btn btn-default btn-sm"
+                    <button class="btn btn-secondary btn-sm"
                         data-bs-toggle="modal"
                         data-bs-target="#reopenFatLinkModal"
                         data-url="{% url 'afat:fatlinks_reopen_fatlink' link.hash %}"
