[CHANGE] Switch from `link_type` to `fleet_type`

--- a/afat/templates/afat/partials/fatlinks/add/clickable-link.html
+++ b/afat/templates/afat/partials/fatlinks/add/clickable-link.html
@@ -20,7 +20,7 @@
 
                 {% bootstrap_field manual_fatlink_form.name %}
 
-                {% if link_types_configured %}
+                {% if fleet_types_configured %}
                     {% bootstrap_field manual_fatlink_form.type %}
                 {% endif %}
 
