--- a/afat/templates/afat/partials/fatlinks/add/esi-link.html
+++ b/afat/templates/afat/partials/fatlinks/add/esi-link.html
@@ -35,7 +35,7 @@
 
                 {% bootstrap_field esi_fatlink_form.name_esi %}
 
-                {% if link_types_configured %}
+                {% if fleet_types_configured %}
                     {% bootstrap_field esi_fatlink_form.type_esi %}
                 {% endif %}
 
