--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -31,8 +31,8 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if fat.fatlink.link_type %}
-                                {{ fat.fatlink.link_type.name }}
+                            {% if fat.fatlink.fleet_type %}
+                                {{ fat.fatlink.fleet_type }}
                             {% endif %}
                         </td>
                         <td>
