--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -64,12 +64,7 @@
 
                 <div class="card-body">
                     <div class="afat-character-alt-characters">
-                        <div class="afat-spinner d-none text-center">
-                            <picture>
-                                <source media="(prefers-color-scheme: dark)" srcset="{% afat_static "afat/images/ring-resize-white-36.svg" %}">
-                                <img src="{% afat_static "afat/images/ring-resize-black-36.svg" %}" alt="{% translate 'Loading …' %}">
-                            </picture>
-                        </div>
+                        {% include "afat/partials/common/spinner.html" %}
                     </div>
                 </div>
             </div>
