[ADD] Overridable default JS options

--- a/afat/templates/afat/view/dashboard/dashboard.html
+++ b/afat/templates/afat/view/dashboard/dashboard.html
@@ -34,12 +34,8 @@
 {% endblock %}
 
 {% block extra_javascript %}
-    {% include "bundles/datatables-js-bs5.html" %}
-    {% include "bundles/moment-js.html" with locale=True %}
-    {% include "afat/bundles/afat-js.html" %}
-
     <script>
-        let afatSettings = {
+        const afatJsSettingsOverride = {
             url: {
                 characterFats: '{% url "afat:dashboard_ajax_get_recent_fats_by_character" 0 %}',
                 recentFatLinks: '{% url "afat:dashboard_ajax_get_recent_fatlinks" %}'
@@ -65,5 +61,8 @@
         };
     </script>
 
+    {% include "bundles/datatables-js-bs5.html" %}
+    {% include "bundles/moment-js.html" with locale=True %}
+    {% include "afat/bundles/afat-js.html" %}
     {% include "afat/bundles/afat-dashboard-js.html" %}
 {% endblock %}
