--- a/afat/templates/afat/bundles/afat-statistics-js.html
+++ b/afat/templates/afat/bundles/afat-statistics-js.html
@@ -2,6 +2,6 @@
 
 <script
     src="{% afat_static 'afat/javascript/afat-statistics.min.js' %}"
-    integrity="sha512-lRjqGSO8dfoR3rznFLpGNeDb20ii2pMZz4vDSU8OZ7NiV9WG9NrUF4kXLQ9hnV3C6Ge/Itv9CvDhLLfALAWUHA=="
-    crossorigin="anonymous"
+{#    integrity="sha512-lRjqGSO8dfoR3rznFLpGNeDb20ii2pMZz4vDSU8OZ7NiV9WG9NrUF4kXLQ9hnV3C6Ge/Itv9CvDhLLfALAWUHA=="#}
+{#    crossorigin="anonymous"#}
 ></script>
