--- a/afat/templates/afat/view/fatlinks/fatlinks-add-fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-add-fatlink.html
@@ -33,8 +33,8 @@
     {% include "afat/bundles/afat-datalist-js.html" %}
 
     <script>
-        $(document).ready(function () {
-            let cancelEsiFleetModal = $('#cancelEsiFleetModal');
+        $(document).ready(() => {
+            const cancelEsiFleetModal = $('#cancelEsiFleetModal');
 
             manageModal(cancelEsiFleetModal);
         });
