--- a/afat/templates/afat/view/statistics/statistics-corporation.html
+++ b/afat/templates/afat/view/statistics/statistics-corporation.html
@@ -42,16 +42,24 @@
 {% endblock %}
 
 {% block extra_javascript %}
+    <script>
+        const afatJsSettingsOverride = {
+            url: {
+                fatMainCharacterDetails: '{% url "afat:dashboard" %}'
+            },
+        };
+    </script>
+
     {% include "bundles/chart-js.html" %}
-    {% include "afat/bundles/afat-js-settings.html" %}
+    {% include "afat/bundles/afat-js.html" %}
     {% include "afat/bundles/afat-statistics-js.html" %}
     {% include "bundles/datatables-js-bs5.html" %}
     {% include "bundles/moment-js.html" %}
 
     <script>
-        (() => {
+        $(document).ready(() => {
             $('#corp-main-characters').DataTable({
-                language: afatJsSettings.dataTables.translation,
+                language: afatSettings.dataTables.translation,
                 order: [
                     [1, 'desc'],
                     [0, 'asc']
@@ -64,6 +72,6 @@
                     drawChart(chart.element, chart.type, chart.data, chart.options);
                 });
             }
-        })();
+        });
     </script>
 {% endblock %}
