--- a/afat/templates/afat/bundles/afat-statistics-js.html
+++ b/afat/templates/afat/bundles/afat-statistics-js.html
@@ -2,6 +2,6 @@
 
 <script
     src="{% afat_static 'afat/javascript/afat-statistics.min.js' %}"
-{#    integrity="sha512-lRjqGSO8dfoR3rznFLpGNeDb20ii2pMZz4vDSU8OZ7NiV9WG9NrUF4kXLQ9hnV3C6Ge/Itv9CvDhLLfALAWUHA=="#}
-{#    crossorigin="anonymous"#}
+    integrity="sha512-Acojshn3K78kEu/43ABgqslON6Xb9FkE+SP1YaHmY5yCH5gz4ZVGWDq7Vm969+aEHCdsDDsQ3DxeYwV3z41iBw=="
+    crossorigin="anonymous"
 ></script>
