--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -37,6 +37,9 @@
                                                         class="btn btn-primary btn-sm btn-afat-corp-stats-view-character"
                                                         data-character-name="{{ main.name }}"
                                                         data-character-id="{{ main.id }}"
+                                                        data-year="{{ year }}"
+                                                        data-month="{{ month }}"
+                                                        data-url="{% url 'afat:statistics_ajax_get_monthly_fats_for_main_character' main.id year month %}"
                                                     >
                                                         <i class="fa-solid fa-eye"></i>
                                                     </button>
@@ -65,6 +68,24 @@
                 <div class="card-body">
                     <div class="afat-character-alt-characters">
                         {% include "afat/partials/common/spinner.html" %}
+
+                        <div class="afat-no-data aa-callout aa-callout-warning d-none">
+                            <p>{% translate "This pilot does not seem to have any FATs on any associated character." %}</p>
+                        </div>
+
+                        <div class="afat-character-alt-characters-table d-none">
+                            <table class="table table-striped table-hover w-100" id="character-alt-characters">
+                                <thead>
+                                    <tr>
+                                        <th>{% translate "Character" %}</th>
+                                        <th class="text-end">{% translate "FATs" %}</th>
+                                    </tr>
+                                </thead>
+
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
