--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -47,7 +47,7 @@
 
                                 <tfoot>
                                     <tr>
-                                        <td colspan="{% if perms.afat.manage_afat %}5{% else %}4{% endif %}">
+                                        <td colspan="6">
                                             {% include "afat/partials/fatlinks/fatlink-list-legend.html" %}
                                         </td>
                                     </tr>
