--- a/afat/templates/afat/view/fatlinks/fatlinks-overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-overview.html
@@ -30,7 +30,10 @@
                         <th>{% translate "Creator" %}</th>
                         <th>{% translate "Eve time" %}</th>
                         <th>{% translate "# of FATs" %}</th>
-                        <th><!-- {% translate "Actions" %} --></th>
+
+                        {% if perms.afat.manage_afat %}
+                            <th><!-- {% translate "Actions" %} --></th>
+                        {% endif %}
                     </tr>
                 </thead>
 
@@ -38,7 +41,7 @@
 
                 <tfoot>
                     <tr>
-                        <td colspan="{% if perms.afat.manage_afat %}6{% else %}5{% endif %}">
+                        <td colspan="{% if perms.afat.manage_afat %}7{% else %}6{% endif %}">
                             {% include "afat/partials/fatlinks/fatlink-list-legend.html" %}
                         </td>
                     </tr>
