[FIX] Reintroduced corp stats table for all characters #381
Closes #381

--- a/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
@@ -13,7 +13,7 @@
             {% include "afat/partials/common/navigation/tab.html" with is_active_tab=False tab_id="fatsbyweek" tab_title=tab_title %}
         </ul>
 
-        <div class="tab-content">
+        <div class="tab-content pt-3">
             <div id="tab-fatsbyship" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsbyship">
                 <div class="card-body">
                     <h4>{% translate "FATs by ship type" %}</h4>
