--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -14,7 +14,7 @@
         <p>{% translate "Only characters that have recent FATs are shown. <small>(latest 10 FATs per character)</small>" %}</p>
 
         {% if characters %}
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills mb-3">
                 {% for character in characters %}
                     {% include "afat/partials/common/navigation/tab-character.html" with forloop=forloop character_id=character.character_id character_name=character.character_name %}
 
@@ -27,7 +27,7 @@
                 {% endfor %}
             </ul>
 
-            <div class="tab-content mt-3 border-top">
+            <div class="tab-content border-top">
                 {% for character in characters %}
                     <div id="content-{{ character.character_id }}" class="tab-pane fade card-default{% if forloop.first %} show active{% endif %}">
                         <div class="card-body">
