--- a/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
@@ -2,7 +2,7 @@
 
 <div id="tab-graphs" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-graphs">
     <div class="card-body">
-        <ul class="nav nav-pills">
+        <ul class="nav nav-pills mb-3">
             {% translate "FATs by ship type" as tab_title %}
             {% include "afat/partials/common/navigation/tab.html" with is_active_tab=True tab_id="fatsbyship" tab_title=tab_title %}
 
