--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -86,6 +86,8 @@
                                         </div>
 
                                         <div class="afat-character-alt-characters-table d-none">
+                                            <p>{% translate "All characters associated with this main character." %}</p>
+
                                             <table class="table table-striped table-hover w-100" id="character-alt-characters">
                                                 <thead>
                                                     <tr>
