--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -60,8 +60,8 @@
 /* Data tables
 ------------------------------------------------------------------------------------- */
 @media all {
-    div#corp-main-characters_wrapper div.dataTables_filter input {
-        margin-left: 0;
-        width: 100%;
+    div.dataTables_filter input[type="search"] {
+        margin-left: 0 !important;
+        width: 100% !important;
     }
 }
