--- a/afat/templates/afat/view/dashboard/dashboard.html
+++ b/afat/templates/afat/view/dashboard/dashboard.html
@@ -34,6 +34,8 @@
 {% endblock %}
 
 {% block extra_javascript %}
+    {% translate "No recent FAT links" as dataTableNoFatlinksWarning %}
+
     <script>
         const afatJsSettingsOverride = {
             url: {
@@ -46,7 +48,7 @@
             },
             translation: {
                 dataTable: {
-                    noFatlinksWarning: '{% translate "No recent FAT links" %}'
+                    noFatlinksWarning: '{{ dataTableNoFatlinksWarning|escapejs }}'
                 },
             },
             modal: {
