--- a/afat/templates/afat/view/fatlinks/fatlinks-overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-overview.html
@@ -63,6 +63,8 @@
 {% endblock %}
 
 {% block extra_javascript %}
+    {% translate "ESI" as dataTableFilterViaEsi %}
+
     <script>
         const afatJsSettingsOverride = {
             url: {
@@ -75,7 +77,7 @@
             translation: {
                 dataTable: {
                     filter: {
-                        viaEsi: '{% translate "ESI" %}'
+                        viaEsi: '{{ dataTableFilterViaEsi|escapejs }}'
                     }
                 },
             },
