--- a/afat/templates/afat/view/statistics/statistics-corporation.html
+++ b/afat/templates/afat/view/statistics/statistics-corporation.html
@@ -55,6 +55,21 @@
                 order: [
                     [1, 'desc'],
                     [0, 'asc']
+                ],
+                columnDefs: [
+                    {
+                        targets: 1,
+                        createdCell: (td) => {
+                            $(td).addClass('text-end');
+                        }
+                    },
+                    {
+                        targets: 2,
+                        createdCell: (td) => {
+                            $(td).addClass('text-end');
+                        },
+                        sortable: false
+                    }
                 ]
             });
 
@@ -64,6 +79,21 @@
                     [1, 'desc'],
                     [0, 'asc']
                 ],
+                columnDefs: [
+                    {
+                        targets: 1,
+                        createdCell: (td) => {
+                            $(td).addClass('text-end');
+                        }
+                    },
+                    {
+                        targets: 2,
+                        createdCell: (td) => {
+                            $(td).addClass('text-end');
+                        },
+                        sortable: false
+                    }
+                ]
             });
 
             // Chart rendering
