[CHANGE] Use DataTables native translations

--- a/afat/templates/afat/view/statistics/statistics-alliance.html
+++ b/afat/templates/afat/view/statistics/statistics-alliance.html
@@ -53,7 +53,7 @@
         $(document).ready(() => {
             // DataTables
             $('#member-corps').DataTable({
-                language: afatSettings.dataTables.translation,
+                language: afatSettings.dataTable.language,
             });
 
             // Chart rendering
