--- a/afat/templates/afat/view/statistics/statistics-character.html
+++ b/afat/templates/afat/view/statistics/statistics-character.html
@@ -51,7 +51,7 @@
     <script>
         $(document).ready(() => {
             $('#raw-data').DataTable({
-                language: afatSettings.dataTables.translation,
+                language: afatSettings.dataTable.language,
                 "order": [
                     [4, "desc"]
                 ]
