--- a/afat/templates/afat/view/statistics/statistics-corporation.html
+++ b/afat/templates/afat/view/statistics/statistics-corporation.html
@@ -51,7 +51,7 @@
     <script>
         $(document).ready(() => {
             $('#corp-main-characters').DataTable({
-                language: afatSettings.dataTables.translation,
+                language: afatSettings.dataTable.language,
                 order: [
                     [1, 'desc'],
                     [0, 'asc']
@@ -74,7 +74,7 @@
             });
 
             $('#corp-members').DataTable({
-                language: afatSettings.dataTables.translation,
+                language: afatSettings.dataTable.language,
                 order: [
                     [1, 'desc'],
                     [0, 'asc']
