[FIX] Spelling (It's EVE time, not Eve time)

--- a/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
@@ -13,7 +13,7 @@
                     <th>{% translate "Fleet type" %}</th>
                     <th>{% translate "Doctrine" %}</th>
                     <th>{% translate "Creator" %}</th>
-                    <th>{% translate "Eve time" %}</th>
+                    <th>{% translate "EVE time" %}</th>
 
                     {% if perms.afat.manage_afat %}
                         <th><!-- {% translate "Actions" %} --></th>
