--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -39,7 +39,7 @@
                                         <th>{% translate "Doctrine" %}</th>
                                         <th>{% translate "Location" %}</th>
                                         <th>{% translate "Ship" %}</th>
-                                        <th>{% translate "Eve time" %}</th>
+                                        <th>{% translate "EVE time" %}</th>
                                     </tr>
                                 </thead>
 
