--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -12,7 +12,7 @@
                     <th>{% translate "Doctrine" %}</th>
                     <th>{% translate "Location" %}</th>
                     <th>{% translate "Ship" %}</th>
-                    <th>{% translate "Eve time" %}</th>
+                    <th>{% translate "EVE time" %}</th>
                 </tr>
             </thead>
 
