--- a/afat/templates/afat/view/fatlinks/fatlinks-overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-overview.html
@@ -28,7 +28,7 @@
                         <th>{% translate "Fleet type" %}</th>
                         <th>{% translate "Doctrine" %}</th>
                         <th>{% translate "Creator" %}</th>
-                        <th>{% translate "Eve time" %}</th>
+                        <th>{% translate "EVE time" %}</th>
                         <th>{% translate "# of FATs" %}</th>
 
                         {% if perms.afat.manage_afat %}
