--- a/afat/templates/afat/partials/statistics/character/tables/character-fats.html
+++ b/afat/templates/afat/partials/statistics/character/tables/character-fats.html
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover w-100" id="{{ id }}">
     <thead>
         <tr>
-            <th>{% translate "Character" %} {{ character_data_template }}</th>
+            <th>{% translate "Character" %}</th>
             <th class="text-end">{% translate "FATs" %}</th>
             <th><!-- {% translate "Character statistics" %} --></th>
 
