[REMOVE] Extra filter

--- a/afat/templates/afat/partials/statistics/character/tables/data/character-fats/corp-main-characters.html
+++ b/afat/templates/afat/partials/statistics/character/tables/data/character-fats/corp-main-characters.html
@@ -5,9 +5,9 @@
                 <td>
                     {{ main.name }}
 
-                    {% if corp.corporation_id != main.corporation_id %}
-                        ({{ main.corporation_name }})
-                    {% endif %}
+{#                    {% if corp.corporation_id != main.corporation_id %}#}
+{#                        ({{ main.corporation_name }})#}
+{#                    {% endif %}#}
                 </td>
 
                 <td class="text-end">{{ main.fats }}</td>
