[REMOVE] Cache breaker for static files

--- a/afat/templates/afat/bundles/afat-fatlink-details-js.html
+++ b/afat/templates/afat/bundles/afat-fatlink-details-js.html
@@ -1,3 +1,3 @@
-{% load afat %}
+{% load sri %}
 
-{% afat_static "javascript/afat-fatlink-details.min.js" %}
+{% sri_static "afat/javascript/afat-fatlink-details.min.js" %}
