--- a/afat/templates/afat/bundles/afat-dashboard-js.html
+++ b/afat/templates/afat/bundles/afat-dashboard-js.html
@@ -1,3 +1,3 @@
-{% load afat %}
+{% load sri %}
 
-{% afat_static "javascript/afat-dashboard.min.js" %}
+{% sri_static "afat/javascript/afat-dashboard.min.js" %}
