--- a/afat/templates/afat/bundles/afat-datalist-js.html
+++ b/afat/templates/afat/bundles/afat-datalist-js.html
@@ -1,3 +1,3 @@
-{% load afat %}
+{% load sri %}
 
-{% afat_static "javascript/afat-datalist.min.js" "module" %}
+{% sri_static "afat/javascript/afat-datalist.min.js" type="module" %}
