[CHANGE] Use the AA framework SVG spinner for the loading animation

--- a/afat/templates/afat/partials/common/spinner.html
+++ b/afat/templates/afat/partials/common/spinner.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 
-<picture class="afat-spinner">
-    {% include "afat/svg/spinner.svg" %}
-</picture>
+<svg class="afat-spinner">
+    <use href="#aa-loading-spinner"></use>
+</svg>
 
 <p class="my-1">
     {% translate "Loading …" %}
