--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -56,3 +56,12 @@
         line-height: 1.1;
     }
 }
+
+/* Statistics
+------------------------------------------------------------------------------------- */
+@media all {
+    .allianceauth-afat .afat-loading-character-data .afat-spinner {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+}
