[MISC] Update app name in translatable strings

--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -4,12 +4,12 @@
 {% load aa_i18n %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking" as page_title %}
+    {% translate "Fleet Activity Tracking" as page_title %}
     {{ page_title|title }}
 {% endblock %}
 
 {% block header_nav_brand %}
-    {% translate "Fleet activity tracking" as page_title %}
+    {% translate "Fleet Activity Tracking" as page_title %}
     {{ page_title|title }}
 {% endblock %}
 
