--- a/afat/templates/afat/view/statistics/statistics-corporation-year-overview.html
+++ b/afat/templates/afat/view/statistics/statistics-corporation-year-overview.html
@@ -5,7 +5,7 @@
 {% load afat %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking statistics" as page_title %}
+    {% translate "Fleet Activity Tracking statistics" as page_title %}
     {{ corporation }} {{ page_title|title }}
 {% endblock %}
 
@@ -37,7 +37,7 @@
 
                         <p>
                             {% blocktranslate %}
-                                Fleet activity tracking statistics for <strong>{{ corporation }}</strong> for the year <strong>{{ year }}</strong>.
+                                Fleet Activity Tracking statistics for <strong>{{ corporation }}</strong> for the year <strong>{{ year }}</strong>.
                             {% endblocktranslate %}
                         </p>
 
