--- a/afat/templates/afat/view/statistics/statistics-corporation.html
+++ b/afat/templates/afat/view/statistics/statistics-corporation.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking statistics" as page_title %}
+    {% translate "Fleet Activity Tracking statistics" as page_title %}
     {{ corporation }} {{ page_title|title }}
 {% endblock %}
 
