--- a/afat/templates/afat/view/statistics/statistics-overview.html
+++ b/afat/templates/afat/view/statistics/statistics-overview.html
@@ -5,7 +5,7 @@
 {% load afat %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking" as page_title %}
+    {% translate "Fleet Activity Tracking" as page_title %}
     {{ page_title|title }}
 {% endblock %}
 
