--- a/afat/templates/afat/view/dashboard/dashboard.html
+++ b/afat/templates/afat/view/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking" as page_title %}
+    {% translate "Fleet Activity Tracking" as page_title %}
     {{ page_title|title }}
 {% endblock %}
 
