--- a/afat/templates/afat/view/fatlinks/fatlinks-details-fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-details-fatlink.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking" as page_title %}
+    {% translate "Fleet Activity Tracking" as page_title %}
     {{ page_title|title }}
 {% endblock %}
 
