--- a/afat/templates/afat/view/statistics/statistics-alliance-year-overview.html
+++ b/afat/templates/afat/view/statistics/statistics-alliance-year-overview.html
@@ -4,7 +4,7 @@
 {% load afat %}
 
 {% block page_title %}
-    {% translate "Fleet activity tracking statistics" as page_title %}
+    {% translate "Fleet Activity Tracking statistics" as page_title %}
     {{ alliance }} {{ page_title|title }}
 {% endblock %}
 
